# SpellWar

./: .gitignore  CMakeLists.txt  README.md  buildUnix.sh  buildWindows.bat
assets/: sources.md
assets/model/decoration/fantasyPlant/: license.txt  scene.gltf
assets/model/decoration/fern/: license.txt  scene.gltf
assets/model/decoration/redTree/: scene.gltf
assets/model/decoration/rock/: license.txt  scene.gltf
assets/model/decoration/stalagmite/: license.txt  scene.gltf
assets/model/decoration/waterPlant/: license.txt  scene.gltf
include/: StochasticLSystem.hpp  StochasticRules.hpp
include/LSystem/: Interpreter.hpp  LSystem.hpp  Rules.hpp  Spell.hpp  StochasticRules.hpp  Turtle.hpp
include/ObjectGL/: AttributeProperties.hpp  BufferObject.hpp  IObjectGL.hpp  Program.hpp  VertexArrayObject.hpp
include/Sprite/: Sprite.hpp  SpriteGroup.hpp
include/Window/: MainFrame.hpp
include/WindowGL/: AbstractMainFrame.hpp  AttributeProperties.hpp  Buffer.hpp  MainFrame.hpp  OGLStateObject.hpp  Program.hpp  VertexArray.hpp
include/glad/: gl.h  glad.h
include/spellwar/core/: Game.hpp  MainFrame.hpp
include/spellwar/gui/: MainFrame.hpp
include/spellwar/maintitle/: Maintitle.hpp
include/spellwar/scene/: Events.hpp  Maintitle.hpp  MaintitleButton.hpp  Scene.hpp  World.hpp
include/spellwar/spell/: Interpreter.hpp  LSystem.hpp  Spell.hpp  StochasticRules.hpp  Turtle.hpp
include/spellwar/world/: Decoration.hpp  Light.hpp  Map.hpp  Platform.hpp  Player.hpp  PlayerCamera.hpp  World.hpp
include/spellwar/world/biome/: Space.hpp
include/spellwar/world/character/: Character.hpp  Flame.hpp  Frost.hpp
include/spellwar/world/map/: AbstractBiome.hpp  Background.hpp  Decoration.hpp  Light.hpp  Map.hpp  MapView.hpp  Platform.hpp
include/spellwar/world/player/: Player.hpp  PlayerCamera.hpp  PlayerHUD.hpp  PlayerInputs.hpp  PlayerModel.hpp  PlayerMotion.hpp
include/tinygltf/: stb_image_write.h
include/wgame/: wgame.hpp
include/wgame/core/: AbstractFrame.hpp  AbstractGame.hpp  Entity.hpp  EntityGroup.hpp  Event.hpp  GameCamera.hpp  GameEngine.hpp  GameLight.hpp  GameObject.hpp  GameObjectGroup.hpp
include/wgame/geometry/: Collision.hpp  Cuboid.hpp  Geometry.hpp  Sphere.hpp  StaticCollision.hpp
include/wgame/graphics/: ColorDrawer.hpp  CubeMapDrawer.hpp  Drawer.hpp  FontDrawer.hpp  ModelDrawer.hpp  TextureDrawer.hpp
include/wgame/gui/: AbstractFrame.hpp  AbstractMainFrame.hpp  ColorDrawer.hpp  Sprite.hpp  SpriteGroup.hpp
include/wgame/model/: AnimatedModelGLTF.hpp  Animation.hpp  ModelGLTF.hpp  ModelMesh.hpp  Skeleton.hpp  StaticModelGLTF.hpp
include/wgame/opengl/: AttributeProperties.hpp  BufferObject.hpp  ElementBufferObject.hpp  IObjectGL.hpp  Program.hpp  Shader.hpp  ShaderStorageBufferObject.hpp  SharedBufferObject.hpp  Texture2D.hpp  UniformBufferObject.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp
include/wgame/system/: Inputs.hpp
include/wgame/tools/: Font.hpp  Image.hpp  Inputs.hpp  Keys.hpp  Model.hpp  System.hpp  Util.hpp
include/wgame/widget/: Button.hpp  Label.hpp  Widget.hpp
shaders/: color.frag  colorDrawer.frag  colorDrawer.vert  colordrawer.frag  colordrawer.vert  cubeMapDrawer.frag  cubeMapDrawer.vert  default.f.glsl  default.v.glsl  fontDrawer.frag  fontDrawer.vert  lightDrawer.frag  lightDrawer.vert  modelDrawer.frag  modelDrawer.vert  modelStaticDrawer.frag  modelStaticDrawer.vert  modeldrawer.frag  modeldrawer.vert  parallaxMapping.frag  parallaxMapping.vert  shader.vert  spell.f.glsl  textureDrawer.frag  textureDrawer.vert  texturedrawer.frag  texturedrawer.vert
src/: Main.cpp  StochasticLSystem.cpp  StochasticRules.cpp  gl.c  glad.c
src/LSystem/: Interpreter.cpp  LSystem.cpp  Spell.cpp  StochasticRules.cpp  Turtle.cpp
src/ObjectGL/: BufferObject.cpp  Program.cpp  VertexArrayObject.cpp
src/Sprite/: SpriteGroup.cpp
src/Window/: MainFrame.cpp
src/WindowGL/: AbstractMainFrame.cpp  Buffer.cpp  MainFrame.cpp  Program.cpp  VertexArray.cpp
src/spellwar/core/: Game.cpp  MainFrame.cpp
src/spellwar/gui/: MainFrame.cpp
src/spellwar/maintitle/: MainTitle.cpp
src/spellwar/scene/: MainTitle.cpp  MaintitleButton.cpp  World.cpp
src/spellwar/spell/: Interpreter.cpp  LSystem.cpp  Spell.cpp  StochasticRules.cpp  Turtle.cpp
src/spellwar/world/: Background.cpp  Decoration.cpp  Light.cpp  Map.cpp  Platform.cpp  Player.cpp  PlayerCamera.cpp  World.cpp
src/spellwar/world/biome/: Space.cpp
src/spellwar/world/character/: Character.cpp  Flame.cpp  Frost.cpp
src/spellwar/world/map/: AbstractBiome.cpp  Background.cpp  Decoration.cpp  Light.cpp  Map.cpp  MapView.cpp  Platform.cpp
src/spellwar/world/player/: Player.cpp  PlayerCamera.cpp  PlayerHUD.cpp  PlayerInputs.cpp  PlayerModel.cpp  PlayerMotion.cpp
src/wgame/core/: AbstractFrame.cpp  AbstractGame.cpp  EntityGroup.cpp  GameCamera.cpp  GameEngine.cpp  GameLight.cpp  GameObject.cpp  GameObjectGroup.cpp
src/wgame/geometry/: Collision.cpp  Cuboid.cpp  Geometry.cpp  Sphere.cpp  StaticCollision.cpp
src/wgame/graphics/: ColorDrawer.cpp  CubeMapDrawer.cpp  Drawer.cpp  FontDrawer.cpp  FrontDrawer.cpp  ModelDrawer.cpp  TextureDrawer.cpp
src/wgame/gui/: AbstractFrame.cpp  AbstractMainFrame.cpp  ColorDrawer.cpp  SpriteGroup.cpp
src/wgame/model/: AnimatedModelGLTF.cpp  Animation.cpp  ModelGLTF.cpp  ModelMesh.cpp  Sekeleton.cpp  StaticModelGLTF.cpp
src/wgame/opengl/: BufferObject.cpp  ElementBufferObject.cpp  IObjectGL.cpp  Program.cpp  Shader.cpp  ShaderStorageBufferObject.cpp  SharedBufferObject.cpp  Texture2D.cpp  UniformBufferObject.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
src/wgame/system/: Inputs.cpp
src/wgame/tools/: Font.cpp  Image.cpp  Inputs.cpp  Model.cpp  System.cpp  Util.cpp
src/wgame/widget/: Button.cpp  Label.cpp  Widget.cpp
